minor cleaning, fixed app.overflow to be able to see full layout on mobile in landscape

--- a/BlazorGridPanel/Components/ScrollViewer.razor.css
+++ b/BlazorGridPanel/Components/ScrollViewer.razor.css
@@ -1,5 +1,4 @@
 ﻿.scrollable-panel {
-    overflow-y: scroll;
     scrollbar-width: thin;
     scrollbar-color: lightgray darkgray;
 }
